--- a/src/app/pages/notes-page/note/note.component.html
+++ b/src/app/pages/notes-page/note/note.component.html
@@ -1,8 +1,8 @@
 <div class="relative border bg-white rounded-xl p-8 pr-20 h-full hover:-translate-y-1 duration-200 ease-in-out">
  
 
-    <h1 class="font-semibold text-2xl mb-2">{{ note.title | uppercase }}</h1>
-    <p appBlue>{{ note.date | date: 'mediumDate' }}</p>
+    <h1 class="font-semibold text-2xl mb-2">{{ note.title }}</h1>
+    <p appBlue>{{ note.date  }}</p>
     <p>{{ note.content  }}</p>
 
 
