--- a/src/app/pages/notes-page/note/note.component.html
+++ b/src/app/pages/notes-page/note/note.component.html
@@ -2,7 +2,7 @@
  
 
     <h1 class="font-semibold text-2xl mb-2">{{ note.title }}</h1>
-    <p appBlue>{{ note.date  }}</p>
+    <p >{{ note.date  }}</p>
     <p>{{ note.content  }}</p>
 
 
